# cream

./: .dockerignore  .editorconfig  .env.example  .env.live.example  .env.local.example  .gitignore  .tool-versions  AGENTS.md  ARCHITECTURE.md  BEAD_DESC_1.md  BEAD_DESC_2.md  CLAUDE.md  Caddyfile  Cargo.toml  PROJECT.md  README.md  biome.json  bunfig.toml  codecov.yml  create_beads.sh  docker-compose.prod.yml  docker-compose.yml  package.json  ruff.toml  tmp-session-repro.ts  tsconfig.base.json  turbo.json
apps/alpaca-stream-proxy/: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  package.json  turbo.json
apps/alpaca-stream-proxy/src/: lib.rs  main.rs
apps/alpaca-stream-proxy/src/application/: mod.rs
apps/alpaca-stream-proxy/src/application/ports/: mod.rs  scanner.rs
apps/alpaca-stream-proxy/src/application/services/: mod.rs  scanner.rs
apps/alpaca-stream-proxy/src/domain/: mod.rs
apps/alpaca-stream-proxy/src/domain/scanner/: mod.rs  tests.rs
apps/alpaca-stream-proxy/src/domain/streaming/: mod.rs
apps/alpaca-stream-proxy/src/domain/subscription/: mod.rs
apps/alpaca-stream-proxy/src/infrastructure/: mod.rs
apps/alpaca-stream-proxy/src/infrastructure/alpaca/: auth.rs  codec.rs  heartbeat.rs  messages.rs  mod.rs  opra.rs  reconnect.rs  sip.rs  trading.rs
apps/alpaca-stream-proxy/src/infrastructure/broadcast/: mod.rs
apps/alpaca-stream-proxy/src/infrastructure/config/: mod.rs  settings.rs
apps/alpaca-stream-proxy/src/infrastructure/grpc/: mod.rs  scanner_server.rs  server.rs
apps/alpaca-stream-proxy/src/infrastructure/health/: mod.rs
apps/alpaca-stream-proxy/src/infrastructure/metrics/: mod.rs
apps/alpaca-stream-proxy/src/infrastructure/scanner/: config_repo.rs  mod.rs
apps/alpaca-stream-proxy/src/infrastructure/telemetry/: mod.rs
apps/alpaca-stream-proxy/tests/: grpc_streaming.rs  scanner_integration.rs  subscription_management.rs
apps/evals/: deepeval.yaml  package.json  pyproject.toml
apps/evals/cream_evals/: __init__.py  datasets.py  metrics.py  runner.py
apps/evals/tests/: __init__.py  test_datasets.py  test_metrics.py
apps/execution-engine/: ARROW_FLIGHT_README.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TACTICS_IMPLEMENTATION.md  build.rs  config.yaml  package.json  turbo.json
apps/execution-engine/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
apps/execution-engine/src/application/: mod.rs
apps/execution-engine/src/application/dto/: mod.rs  order_dto.rs  risk_dto.rs
apps/execution-engine/src/application/ports/: broker_port.rs  event_publisher_port.rs  market_data_port.rs  mod.rs  price_feed_port.rs  quote_provider_port.rs  risk_repository_port.rs
apps/execution-engine/src/application/services/: mod.rs  position_monitor.rs
apps/execution-engine/src/application/use_cases/: cancel_orders.rs  mod.rs  monitor_stops.rs  reconcile.rs  roll_option.rs  submit_orders.rs  validate_risk.rs
apps/execution-engine/src/backtest/: cleanup.rs  commission.rs  config.rs  data_gaps.rs  engine.rs  fill_engine.rs  logging.rs  look_ahead.rs  metrics.rs  mod.rs  monte_carlo.rs  multi_leg.rs  order.rs  parallel.rs  position.rs  replay.rs  security.rs  slippage.rs  trade.rs  triggers.rs  walkforward.rs
apps/execution-engine/src/backtest/look_ahead/: checker.rs  helpers.rs  mod.rs  types.rs  validation.rs
apps/execution-engine/src/backtest/metrics/: calculator.rs  constants.rs  format.rs  math.rs  mod.rs  types.rs
apps/execution-engine/src/backtest/parallel/: config.rs  error.rs  executor.rs  grid.rs  mod.rs  progress.rs  result.rs  types.rs
apps/execution-engine/src/backtest/replay/: data_source.rs  engine.rs  error.rs  mod.rs  synchronized.rs  types.rs
apps/execution-engine/src/backtest/walkforward/: analysis.rs  builder.rs  engine.rs  mod.rs  types.rs
apps/execution-engine/src/broker/: mod.rs  retry.rs
apps/execution-engine/src/config/: brokers.rs  circuit_breaker.rs  constraints.rs  environment.rs  feeds.rs  mod.rs  observability.rs  persistence.rs  pricing.rs  reconciliation.rs  recovery.rs  safety.rs  server.rs  stops.rs  validation.rs
apps/execution-engine/src/domain/: mod.rs
apps/execution-engine/src/domain/execution_tactics/: errors.rs  mod.rs
apps/execution-engine/src/domain/option_position/: errors.rs  mod.rs
apps/execution-engine/src/domain/order_execution/: errors.rs  mod.rs  (+1 more)
apps/execution-engine/src/execution/: alpaca.rs  backtest.rs  gateway.rs  mod.rs  persistence.rs  reconciliation.rs  recovery.rs  state.rs  stops.rs  tactics.rs
apps/execution-engine/src/feed/: alpaca.rs  alpaca_controller.rs  alpaca_processor.rs  controller.rs  databento.rs  gap_recovery.rs  health.rs  microstructure.rs  mod.rs  processor.rs
apps/execution-engine/src/infrastructure/: mod.rs
apps/execution-engine/src/models/: constraint.rs  decision.rs  environment.rs  mod.rs  order.rs
apps/execution-engine/src/observability/: metrics.rs  mod.rs  tracing.rs
apps/execution-engine/src/options/: mod.rs  multileg.rs  rolling.rs
apps/execution-engine/src/pricing/: iv.rs  mod.rs  strategy.rs
apps/execution-engine/src/resilience/: circuit_breaker.rs  mod.rs
apps/execution-engine/src/risk/: constraints.rs  mod.rs  sizing.rs
apps/execution-engine/src/safety/: mass_cancel.rs  mod.rs  monitor.rs
apps/execution-engine/src/server/: arrow_flight.rs  grpc.rs  http.rs  mod.rs  tls.rs
apps/execution-engine/tests/: fixture_e2e_test.rs  ooda_integration_test.rs  tactics_integration_test.rs
apps/execution-engine/tests/fixtures/: butterfly_spread.json  buy_to_cover.json  equity_swing_trade.json  iron_condor.json  no_trade_cycle.json  options_vertical_spread.json  pdt_close_position.json  portfolio_rebalance.json  rejected_by_risk.json  short_sell_entry.json  single_leg_call.json  single_leg_put.json
apps/vision-service/: README.md  package.json  pyproject.toml
apps/vision-service/tests/: __init__.py  test_analyzer.py  test_levels.py  test_models.py  test_patterns.py  test_placeholder.py
apps/vision-service/vision_service/: __init__.py  analyzer.py  levels.py  models.py  patterns.py  preprocessor.py
(+1372 files in other folders)
