# Execution Engine - Rust Core
# See: docs/plans/09-rust-core.md
#
# This is the deterministic execution engine that:
# - Validates DecisionPlans from TypeScript agents
# - Routes orders to brokers (Alpaca)
# - Enforces risk constraints
# - Handles position management
#
# Build: cargo build -p execution-engine
# Test:  cargo test -p execution-engine
# Coverage: cargo cov (see .cargo/config.toml)

[package]
name = "execution-engine"
version = "0.1.0"
edition = "2024"
authors = ["Chris Cheney <chris@cheney.dev>"]
description = "Deterministic execution engine for Cream trading system"
license = "AGPL-3.0-only"
repository = "https://github.com/ccheney/cream"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# gRPC
tonic = { version = "0.14.2", features = ["tls-ring", "tls-native-roots"] }
tonic-types = "0.14.2"
tonic-prost = "0.14.2"
rcgen = "0.14"  # Certificate generation for dev/testing
prost = "0.14.1"
prost-types = "0.14.1"
tokio-stream = "0.1.18"

# Arrow Flight (high-performance data transport)
# Updated to 57.1.0 for tonic 0.14 compatibility
arrow = { version = "57.1.0", features = ["ipc", "json"] }
arrow-flight = { version = "57.1.0", features = ["flight-sql-experimental", "tls-native-roots"] }
arrow-schema = "57.1.0"
arrow-array = "57.1.0"
arrow-ipc = "57.1.0"
futures = "0.3"
futures-util = "0.3"

# HTTP server (using Axum for JSON API until buf generate is available)
axum = "0.8.8"
tower = "0.5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2.5.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Decimal arithmetic (financial precision)
rust_decimal = { version = "1.39", features = ["serde", "serde-with-str"] }

# UUID for order IDs
uuid = { version = "1.19", features = ["v4"] }

# Random number generation (for jitter in backoff)
rand = "0.9"

# Configuration
config = "0.15.19"
regex = "1.12.2"
dotenvy = "0.15"  # Load .env files

# HTTP client for broker APIs
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Turso Database (Rust rewrite of SQLite)
turso = "0.4.2"
async-trait = "0.1.89"
libm = "0.2.15"
rust_decimal_macros = "1.39.0"

# Parallel processing
rayon = "1.11"

# Alpaca market data feed (WebSocket-first, primary provider)
alpaca-websocket = "0.3"
alpaca-base = "0.25"

# Concurrency primitives
parking_lot = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4.5"
mockall = "0.14"
proptest = "1.9"
criterion = { version = "0.8.1", features = ["html_reports"] }
test-case = "3.3.1"
wiremock = "0.6"
tempfile = "3.24"
filetime = "0.2"

[build-dependencies]
# Protobuf codegen (future)
# tonic-build = "0.12"

[[bin]]
name = "execution-engine"
path = "src/main.rs"

[lib]
name = "execution_engine"
path = "src/lib.rs"

# Coverage configuration
# See .cargo/config.toml for cargo-llvm-cov aliases
# Profile moved to workspace root Cargo.toml

[lints.rust]
# Strict lints for production code
unsafe_code = "forbid"
missing_docs = "warn"
# Allow coverage cfg in build.rs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lints.clippy]
# Clippy lints
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
