# Vision Service - Chart Analysis & Computer Vision
# See: docs/plans/14-testing.md lines 875-899
#
# Coverage: pytest --cov
# Threshold: 70% (Standard tier)
#
# Dependencies managed by uv:
#   uv pip install -e ".[dev]"

[project]
name = "cream-vision-service"
version = "0.1.0"
description = "Chart analysis and computer vision service for Cream"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chris Cheney", email = "chris@cheney.dev" }]
requires-python = ">=3.15"

dependencies = [
    "pillow>=11.0",
    "opencv-python>=4.10",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.15",
    "ruff>=0.8",
]

# ============================================
# pytest Configuration
# ============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# Coverage flags
addopts = """
    --cov=vision_service
    --cov-report=term-missing
    --cov-report=html:coverage
    --cov-report=xml:coverage.xml
    --cov-fail-under=70
    -v
"""

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================
# coverage.run Configuration
# ============================================
[tool.coverage.run]
branch = true
source = ["vision_service"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "**/__init__.py",
    "**/conftest.py",
]

# ============================================
# coverage.report Configuration
# ============================================
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
]
fail_under = 70
precision = 2
show_missing = true
skip_covered = false

# ============================================
# Ruff Configuration
# ============================================
[tool.ruff]
target-version = "py315"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["vision_service"]

# ============================================
# MyPy Configuration
# ============================================
[tool.mypy]
python_version = "3.15"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
